--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -8,7 +8,7 @@ body {
     align-items: center;
 }
 
-.item-container {
+.entitylist-container {
     margin-left: 10px;
 }
 
@@ -39,6 +39,7 @@ a:hover {
 
 .select-box {
     margin-left: 10px;
+    margin-right: 10px;
 }
 
 h1 {
@@ -141,6 +142,11 @@ table td {
 
 table th {
     background-color: #2a2a2a;
+}
+
+.transparent-col {
+    background-color: transparent;
+    border: none;
 }
 
 h2 {
