--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -61,6 +61,9 @@ select {
     border: none;
     padding: 5px;
 }
+input[type="number"] {
+  width: 8ch;
+}
 
 select option {
     background-color: #2a2a2a;
