--- a/app/templates/configure/item.html
+++ b/app/templates/configure/item.html
@@ -30,33 +30,37 @@
         <div>
             <input type="checkbox" id="top_level" name="top_level" {% if current_item.toplevel %}checked{% endif %}>
             <label for="top_level">Show in Overview</label><br>
-            <input type="radio" id="growable-gain-over_time" name="growable" value="over_time" {% if current_item.growable != "instantly" and current_item.growable != "not-growable" %}checked{% endif %}>
+            <input type="radio" id="growable-gain-over_time" name="growable" value="over_time" {% if current_item.growable != "instantly" and current_item.growable != "not_growable" %}checked{% endif %}>
             <label for="growable-gain-over_time">Gain over time</label>
             <input type="radio" id="growable-gain-instantly" name="growable" value="instantly" {% if current_item.growable == "instantly" %}checked{% endif %}>
             <label for="growable-gain-instantly">Gain instantly</label>
-            <input type="radio" id="growable-not-growable" name="growable" value="not-growable" {% if current_item.growable == "not-growable" %}checked{% endif %}>
-            <label for="growable-not-growable">Not growable</label>
+            <input type="radio" id="growable-not_growable" name="growable" value="not_growable" {% if current_item.growable == "not_growable" %}checked{% endif %}>
+            <label for="growable-not_growable">Not growable</label>
         </div>
         <div id="rate-container">
-            <label for="rate-amount">Rate:</label><br>
+            <label for="rate-amount">Rate:</label>
             <input type="number" id="rate-amount" name="rate_amount" value="{{ current_item.timer.rate_amount }}" required>
             <span>per</span>
-            <input type="number" id="rate-duration" name="rate_duration" value="{{ current_item.timer.rate_duration }}" required>
+            <input type="text" size="6" id="rate-duration" name="rate_duration" value="{{ current_item.timer.rate_duration }}" required>
             <span>seconds</span><br>
         </div>
 
         <div id="source-container" style="border: 1px solid #ccc; padding: 10px;">
-            {% for source_item, quantity in current_item.sources.items() %}
-                <div class="source" data-source-id="{{ source_item.id }}">
-                    <input type="hidden" name="source_id" value="{{ source_item.id }}">
-                    <p>{{ source_item.name }}
-                    <label for="source-{{ source_item.id }}-quantity">:</label>
-                    <input type="number" id="source-{{ source_item.id }}-quantity" name="source_quantity_{{ source_item.id }}" value="{{ quantity }}">
-                    <button class="remove-source-btn lesser-button">Remove Source</button>
-                    </p>
-                </div>
-            {% endfor %}
-            <div>
+            <div class="source flexdiv" data-source-id="result">
+                <label>Yields:</label>
+                <input type="number" id="result-quantity" name="result_quantity" value="{{ current_item.result_qty }}">
+            </div>
+                {% for source_item, source_qty in current_item.sources.items() %}
+                    <div class="source flexdiv" data-source-id="{{ source_item.id }}">
+                        <label>Takes</label>
+                        <input type="number" id="source-{{ source_item.id }}-quantity" name="source_quantity_{{ source_item.id }}" value="{{ source_qty }}">
+                        {{ source_item.name }}
+                        <button class="remove-source-btn lesser-button">Remove Source</button>
+                    </div>
+                {% endfor %}
+
+                <!-- Placeholder for appending new sources -->
+                <div id="sourcelist_end" style="width: 0; height: 0; opacity: 0;"></div>
                 {% set outerscope = namespace(has_other_item = false) %}
                 {% for item in game.items %}
                     {% if item.id != current_item.id %}
@@ -117,17 +121,14 @@
                 }
                 // Create HTML elements for the source
                 var sourceHtml = `
-                    <div class="source" data-source-id="${sourceId}">
-                        <input type="hidden" name="source_id" value="${sourceId}">
-                        <p>${sourceName}
-                        <label for="source-${sourceId}-quantity">:</label>
-                        <input type="number" id="source-${sourceId}-quantity" name="source_quantity_${sourceId}" value="0">
-                        <button class="remove-source-btn">Remove Source</button>
-                        </p>
+                    <div class="source flexdiv" data-source-id="${sourceId}">
+                        <label>Takes:</label>
+                        <input type="number" id="source-${sourceId}-quantity" name="source_quantity_${sourceId}" value="1">
+                        ${sourceName}
+                        <button class="remove-source-btn lesser-button">Remove Source</button>
                     </div>
                 `;
-                //<input type="hidden" name="source_id_${sourceId}" value="${sourceId}">
-                $('#source-container').prepend(sourceHtml);
+                $('#sourcelist_end').before(sourceHtml);
             });
 
             $('#source-container').on('click', '.remove-source-btn', function() {
