--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -11,28 +11,28 @@
         <span class="separator">|</span>
         <a class="upper-left" href="{{ url_for('configure') }}">General Setup</a>
         <span class="separator">|</span>
-        <a class="upper-left" href="{{ url_for('configure_item', item_id=item.id) }}">Item Setup</a>
+        <a class="upper-left" href="{{ url_for('configure_item', item_id=current.id) }}">Item Setup</a>
     </div>
     <table>
         <tr>
             <td style="background-color: #2a2a2a; border-bottom: 2px solid #ffffff;">
-                <h2 style="margin: 10px 10px">{{ item.name }}:
-                <span id="quantity-{{ item.id }}">...</span>
+                <h2 style="margin: 10px 10px">{{ current.name }}:
+                <span id="quantity-{{ current.id }}">...</span>
                 </h2>
             </td>
         </tr>
-        {% if item.description %}
+        {% if current.description %}
         <tr>
             <td>
-                <p>{{ item.description }}</p>
+                <p>{{ current.description }}</p>
             </td>
         </tr>
         {% endif %}
-        {% if item.growable == 'over_time' %}
+        {% if current.growable == 'over_time' %}
         <tr>
             <td>
-                Rate: <span id="rate-amount">{{ item.timer.rate_amount }}</span> per 
-                <span id="rate-duration">{{ item.timer.rate_duration }}</span> seconds
+                Rate: <span id="rate-amount">{{ current.timer.rate_amount }}</span> per 
+                <span id="rate-duration">{{ current.timer.rate_duration }}</span> seconds
             </td>
         </tr>
         <tr>
@@ -41,7 +41,14 @@
             </td>
         </tr>
         {% endif %}
-        {% if item.sources %}
+        {% if current.growable != 'not_growable' %}
+        <tr>
+            <td>
+                Gives: {{ current.result_qty }}
+            </td>
+        </tr>
+        {% endif %}
+        {% if current.sources %}
         <tr>
             <td>
                 <table class="inner-table" cellspacing="0" cellpadding="5">
@@ -50,7 +57,7 @@
                         <th>In Stock</th>
                         <th>Required</th>
                     </tr>
-                    {% for source_item, quantity in item.sources.items() %}
+                    {% for source_item, quantity in current.sources.items() %}
                     <tr>
                         <td>
                             <a href="{{ url_for('play_item', item_id=source_item.id) }}">
@@ -67,8 +74,8 @@
         {% endif %}
 
         {% set outerscope = namespace(used_for_items=[]) %}
-        {% for other_item in item.game_data.items %}
-            {% if item in other_item.sources %}
+        {% for other_item in current.game_data.items %}
+            {% if current in other_item.sources %}
                 {% set _ = outerscope.used_for_items.append(other_item) %}
             {% endif %}
         {% endfor %}
@@ -81,7 +88,7 @@
                         <th>Required</th>
                     </tr>
                     {% for used_for_item in outerscope.used_for_items %}
-                    {% set quantity = used_for_item.sources[item] %}
+                    {% set quantity = used_for_item.sources[current] %}
                     <tr>
                         <td>
                             <a href="{{ url_for('play_item', item_id=used_for_item.id) }}">
@@ -97,13 +104,13 @@
         {% endif %}
     </table>
 
-    {% if item.growable == 'over_time' %}
-    <button id="start-btn" {% if item.timer.is_running %}disabled{% endif %}>
-        {% if item.timer.is_running %}Running...{% else %}Start{% endif %}
+    {% if current.growable == 'over_time' %}
+    <button id="start-btn" {% if current.timer.is_running %}disabled{% endif %}>
+        {% if current.timer.is_running %}Running...{% else %}Start{% endif %}
     </button>
-    <button id="stop-btn">Stop</button>
-    {% elif item.growable == 'instantly' %}
-    <input type="number" id="quantity_to_gain" size="10" value="1">
+    <button id="stop-btn"{% if not current.timer.is_running %}disabled{% endif %}>Stop</button>
+    {% elif current.growable == 'instantly' %}
+    <input type="number" id="quantity_to_gain" size="10" value="{{ current.result_qty }}">
     <button id="gain-btn">Gain</button>
     {% endif %}
 
@@ -111,12 +118,12 @@
         $(document).ready(function() {
             function updateQuantity() {
                 // Main item quantity
-                $.get('/item/quantity/{{ item.id }}', function(data) {
-                    $('#quantity-{{ item.id }}').text(data.quantity);
+                $.get('/item/quantity/{{ current.id }}', function(data) {
+                    $('#quantity-{{ current.id }}').text(data.quantity);
                 });
 
                 // Source item quantities
-                {% for source_item, _ in item.sources.items() %}
+                {% for source_item, _ in current.sources.items() %}
                 $.get('/item/quantity/{{ source_item.id }}', function(data) {
                     $('#source-{{ source_item.id }}-quantity').text(data.quantity);
                 });
@@ -125,23 +132,26 @@
 
             // Update Elapsed time
             function updateElapsedTime() {
-                $.get('/item/time/{{ item.id }}', function(data) {
+                $.get('/item/time/{{ current.id }}', function(data) {
                     $('#elapsed-time').text(data.time);
                 });
             }
 
             // the Start button may change to "Running..."
             function updateStartbuttonLabel() {
-                fetch('/item/timer_status/{{ item.id }}')
+                fetch('/item/timer_status/{{ current.id }}')
                     .then(response => response.json())
                     .then(data => {
                         var startBtn = document.getElementById("start-btn");
+                        var stopBtn = document.getElementById("stop-btn");
                         if (data.is_running) {
                             startBtn.innerHTML = "Running...";
                             startBtn.disabled = true;
+                            stopBtn.disabled = false;
                         } else {
                             startBtn.innerHTML = "Start";
                             startBtn.disabled = false;
+                            stopBtn.disabled = true;
                         }
                     })
                     .catch(error => {
@@ -156,7 +166,7 @@
             // Update quantities, elapsed time, and rate every second
             setInterval(function() {
                 updateQuantity();
-                {% if item.growable == 'over_time' %}
+                {% if current.growable == 'over_time' %}
                     updateElapsedTime();
                     updateStartbuttonLabel();
                 {% endif %}
@@ -165,27 +175,43 @@
 
             // Button click event handlers
             $('#gain-btn').click(function() {
-                item_id = {{ item.id }}
+                var quantity = parseInt($('#quantity_to_gain').val(), 10);
+                var minResultQty = parseInt('{{ current.result_qty }}', 10);
+                if (quantity < minResultQty) {
+                    alert('Minimum quantity to gain is ' + minResultQty + '.');
+                    return; // Stop further processing
+                }
+                item_id = {{ current.id }}
                 quantity = $('#quantity_to_gain').val();
                 $.ajax({
                     url: '/item/gain/' + item_id,
                     method: 'POST',
                     data: { quantity: quantity },
                     success: function(response) {
-                        updateQuantity();
+                        if (response.status === 'error') {
+                            console.error(response.message);
+                            alert(response.message);
+                        }
                     },
                     error: function(error) {
                         console.error('Error:', error);
+                    },
+                    complete: function() {
+                        updateQuantity();
                     }
                 });
             });
             $('#start-btn').click(function() {
-                item_id = {{ item.id }}
+                var item_id = {{ current.id }};
                 console.log('startItem(): ' + item_id);
                 fetch('/item/start/' + item_id)
                     .then(response => response.json())
                     .then(data => {
                         console.log(data.message);
+                        if (data.status === 'error') {
+                            console.error('Could not start:', data.message);
+                            alert(data.message);
+                        }
                         updateStartbuttonLabel();
                     })
                     .catch(error => {
@@ -193,7 +219,7 @@
                     });
             });
             $('#stop-btn').click(function() {
-                item_id = {{ item.id }}
+                item_id = {{ current.id }}
                 console.log('stopItem(): ' + item_id);
                 fetch('/item/stop/' + item_id)
                     .then(response => response.json())
